<resources>
    <string name="app_name">CookieCorner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">COOKIE CORNER</string>
    <string name="nav_header_subtitle">Every cookie counts \nest • 1970</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--  MAIN DRAWER MENU ITEMS  -->
    <string name="menu_home">Home</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_bakery">Our Bakery</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_account">My Account</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_credits">Credits</string>
    <!--  MAIN DRAWER SUBHEADINGS  -->
    <string name="sub_account">Account</string>
    <string name="sub_contact">Need Help?</string>


    <!--  MOBILE NAVIGATION FRAGMENT LABELS  -->
    <string name="nav_home">COOKIE CORNER</string>
    <string name="nav_menu">OUR MENU</string>
    <string name="nav_bakery">OUR BAKERY</string>
    <string name="nav_recipes">RECIPES</string>
    <string name="nav_account">My Account</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_contact">CONTACT US</string>
    <string name="nav_customize">CUSTOMIZE COOKIE</string>
    <string name="nav_credits">CREDITS</string>

    <!--  GALLERY, RATINGS AND FAQ FRAGMENT STRINGS  -->
    <!--  TOP HEADINGS  -->
    <string name="nav_gallery">GALLERY</string>
    <string name="nav_ratings">RATINGS</string>
    <string name="nav_faq">FREQUENTLY ASKED QUESTIONS</string>
    <!--  BUTTON TITLES  -->
    <string name="gallery_name">Gallery</string>
    <string name="ratings_name">Ratings</string>
    <string name="faq_name">FAQ</string>

    <!--  CONTACT FRAGMENT BUTTON STRINGS -->
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="text">Text</string>
    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>

    <!--  COMPANY INFORMATION  -->
    <string name="CompanyDesc">Here at Cookie Corner, we believe that every cookie counts. Celebrating our 50th anniversary,
    we bake home into the heart of our cookie dough, combining natural and flavourful ingredients that leave your tastebuds
    wanting more every time.</string>

    <!--  Default Strings  -->
    <string name="textview">TextView</string>
    <string name="place_order">Place Order</string>

    <!--  Customize Fragment Strings  -->
    <string name="cust_title">Customize Cookie</string>
    <string name="cust_cookie">Your Cookie</string>
    <string name="cust_flavour">Flavour</string>
    <string name="small">Small</string>
    <string name="med">Medium</string>
    <string name="large">Large</string>
    <string name="quantity">Quantity</string>
    <string name="topping">Topping</string>
    <string name="order">ORDER</string>


    <!-- Preference Titles -->
    <string name="account_header">Account</string>

    <!-- Account Preferences -->
    <string name="account_name">Your Name</string>
    <string name="account_location">Delivery Location</string>
    <string name="account_payment">Payment Information</string>
    <string name="account_card">Card Number</string>
    <string name="account_holder">Account Holder</string>
    <string name="account_date">Expiry Date</string>
    <string name="account_cvc">CVC</string>

    <!-- Sync Preferences -->
    <string name="title_activity_settings">Settings</string>

    <!--  Credits Strings  -->
    <string name="developed">Developed by © 2020 Farzana Moury</string>
    <string name="images">Images</string>
    <string name="pixabay">Pixabay</string>
    <string name="pixabay_link">https://pixabay.com/</string>
    <string name="rawpixel">Rawpixel</string>
    <string name="rawpixel_link">https://www.rawpixel.com/</string>
    <string name="canva">Canva</string>
    <string name="canva_link">https://www.canva.com/</string>
    <string name="websites">Websites</string>
    <string name="android">Android</string>
    <string name="android_link">https://developer.android.com/guide</string>
    <string name="link1">http://pakirecipe.blogspot.com/2012/08/bakar-khani-by-chef-shireen-anwer.html</string>
    <string name="link2">https://bakingamoment.com/easy-homemade-puff-pastry-recipe/</string>

    <!--  WEBSITE SOURCES  -->
    <!--  RECIPE WEBSITES  -->
    <!--    https://bakingamoment.com/easy-homemade-puff-pastry-recipe/-->
</resources>