<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_menu" />
        <item
            android:id="@+id/nav_bakery"
            android:icon="@drawable/ic_baseline_store_24"
            android:title="@string/menu_bakery" />

        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_recipes" />
    </group>


    <item android:title="@string/sub_account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/menu_account" />

                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_baseline_shopping_cart_24"
                    android:title="@string/menu_orders" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sub_contact">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_baseline_contact_support_24"
                    android:title="@string/menu_contact" />
            </group>
        </menu>
    </item>

<!--   #1 Create Main Menu
  * added the rest of the fragments to mobile_navigation.xml
  * added respective IDs and labels to these fragments
  * added the fragment IDs to AppBarConfiguration in MainActivity
  * created the rest of the drawer items  -->
</menu>