<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cookiecorner.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.cookiecorner.MenuFragment"
        android:label="@string/nav_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/nav_bakery"
        android:name="com.example.cookiecorner.BakeryFragment"
        android:label="@string/nav_bakery"
        tools:layout="@layout/fragment_bakery" />
    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.cookiecorner.RecipesFragment"
        android:label="@string/nav_recipes"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.cookiecorner.AccountFragment"
        android:label="@string/nav_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.cookiecorner.OrdersFragment"
        android:label="@string/nav_orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.cookiecorner.ContactFragment"
        android:label="@string/nav_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>